[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "blob"
version = "1.0.0"
description = "A tool for working with unstructured binary data"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Yan Shoshitaishvili" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
scipy = ["scipy"]
mulpyplexer = ["mulpyplexer"]
all = ["scipy", "mulpyplexer"]
dev = ["pytest", "scipy", "mulpyplexer", "ruff"]

[project.urls]
Homepage = "https://github.com/zardus/blob"
Repository = "https://github.com/zardus/blob"
Issues = "https://github.com/zardus/blob/issues"

[tool.setuptools.packages.find]
include = ["blob*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E701", "E741"]

[tool.ruff.lint.per-file-ignores]
"blob/blob.py" = ["E402"]
"blob/utils.py" = ["E402"]
"blob/pyecm/pyecm.py" = ["E402", "E711", "F401", "F841"]
